# lesta-games-tesk-task

./: Dockerfile  README.md  docker-compose.yml  example.env  nginx.conf  pyproject.toml
src/: main.py
src/application/transport/text_analysis/: tf_idf.py
src/application/use_cases/text_analysis/: tf_idf.py
src/config/: app.py  server.py  text_analysis.py
src/domain/services/text_analysis/: tf_idf.py
src/infrastructure/fastapi/: app.py  middlewares.py
src/infrastructure/logger/: logger.py
src/infrastructure/repositories/: abstract_repository.py
src/infrastructure/repositories/sqlalchemy_orm/: abstract_repository.py
src/ui/rest/: router.py
src/ui/rest/texts_analysis/: router.py  tf_idf.py
src/utils/exceptions/: http_exc.py
tests/domain/services/text_analysis/: tf_idf_test.py
www/: index.html
